sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: ')' expected but integer literal found.
		if(ecart>(Double)1){
                                 ^AlgCombSort:11: error: ';' expected but ')' found.
		while(i+ecart<(Double)getNombreValeurs()){
                                                        ^AlgCombSort:18: error: ')' expected but integer literal found.
	}while(ecart>(Double)1 || test)
                             ^