sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart:Double =getNombreValeurs();
	var test:Boolean=true;
	do{
		test=false;
		if(ecart>(Double)1){
			ecart=ecart/1.3;
		}
		var i:Double=0;
		while(i+ecart<(Double)getNombreValeurs()){
			if(plusPetit(i+ecart,i)){
				echange(i+ecart,i);
				test=true;
			}
			i++;
		}
	}while(ecart>(Double)1 || test)
}
